...
                    self.presentationMode.wrappedValue.dismiss()
                },
                label: { VStack{
                    Image(systemName: "arrow.backward")
                    }
                    .foregroundColor(.white)
                }).accessibility(identifier: "MapBackBtn")
            ,
            trailing: Button(action: ManageMeteor){
                Image(favBtnName)
            }.accessibility(identifier: "FavoritesBtn")
        )
    }
    
    private func ManageMeteor() {
        if(self.isFavorite == false) {
            self.meteorMgr.save(meteor: meteor)
...
